# frontier-llmops-core

./: .env.example  .gitignore  Makefile  README.md  next_steps.md  run_pipeline.sh
01_data_curation/: README.md  pyproject.toml
01_data_curation/configs/: defaults.yaml
01_data_curation/scripts/: chunker.py  embedder.py  generator.py  main.py  quality_filter.py
02_peft_tuning/: README.md  pyproject.toml  run_on_colab.ipynb
02_peft_tuning/configs/: defaults.yaml
02_peft_tuning/scripts/: data.py  inference.py  main.py  merge.py  trainer.py
03_alignment_rlhf/: README.md  pyproject.toml  run_on_colab.ipynb
03_alignment_rlhf/configs/: defaults.yaml
03_alignment_rlhf/scripts/: dpo_trainer.py  main.py  ppo_trainer.py  preference_data.py  reward_model.py
04_eval_and_metrics/: README.md  pyproject.toml
04_eval_and_metrics/configs/: defaults.yaml
04_eval_and_metrics/scripts/: automated_metrics.py  eval_dataset.py  llm_judge.py  main.py  report.py
05_serving_inference/: README.md  pyproject.toml  run_on_colab.ipynb
05_serving_inference/configs/: defaults.yaml
05_serving_inference/scripts/: benchmark.py  client.py  export_gguf.py  main.py  quantize_awq.py  serve.py
06_cache_guardrails/: README.md  pyproject.toml
06_cache_guardrails/configs/: defaults.yaml
06_cache_guardrails/scripts/: input_guardrails.py  main.py  output_guardrails.py  pipeline.py  semantic_cache.py
