[project]
name = "frontier-peft-tuning"
version = "0.1.0"
description = "Phase 2: QLoRA fine-tuning using PEFT and bitsandbytes"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.4.0",
    "transformers>=4.44.0",
    "peft>=0.12.0",
    "bitsandbytes>=0.43.0",
    "accelerate>=0.33.0",
    "datasets>=2.20.0",
    "wandb>=0.17.0",
    "pyyaml>=6.0",
]

[project.scripts]
peft-tune = "scripts.main:main"
