[project]
name = "frontier-rlhf-alignment"
version = "0.1.0"
description = "Phase 3: RLHF — reward model training and PPO/DPO alignment"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.4.0",
    "transformers>=4.44.0",
    "trl>=0.9.0",
    "datasets>=2.20.0",
    "accelerate>=0.33.0",
    "wandb>=0.17.0",
    "pyyaml>=6.0",
]

[project.scripts]
rlhf-train = "scripts.main:main"
