[project]
name = "frontier-serving-inference"
version = "0.1.0"
description = "Phase 5: Model quantisation, vLLM serving, and inference benchmarking"
requires-python = ">=3.12"
dependencies = [
    "vllm>=0.6.0",
    "torch>=2.4.0",
    "transformers>=4.44.0",
    "aiohttp>=3.9.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
serve-run = "scripts.main:main"
